--- a/node31.html
+++ b/node31.html
@@ -217,7 +217,7 @@ calculator.html</A>
   
 
 <PRE>
-[~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat calculator.html 
+[~/srcPLgrado/pegjs/examples(master)]$ cat calculator.html 
 &lt;!DOCTYPE HTML&gt;
 &lt;html lang="en"&gt;
   &lt;head&gt;
@@ -228,9 +228,9 @@ calculator.html</A>
   &lt;body&gt;
     &lt;h1&gt;pegjs&lt;/h1&gt;
     &lt;div id="content"&gt;
-      &lt;script src="jquery/jquery.js"&gt;&lt;/script&gt; 
+      &lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"&gt;&lt;/script&gt;
       &lt;script src="arithmetics.js"&gt;&lt;/script&gt;
-      &lt;script src="calculator.js"&gt;&lt;/script&gt;
+      &lt;script src="calc.js"&gt;&lt;/script&gt;
 
       &lt;p&gt;
       Load an example:
@@ -245,8 +245,7 @@ calculator.html</A>
           &lt;/td&gt;
           &lt;td class="output"&gt;
             &lt;pre&gt;
-&lt;span id="output"&gt;
-&lt;/span&gt; &lt;!-- Output goes here! --&gt;
+              &lt;span id="output"&gt;&lt;/span&gt; &lt;!-- Output goes here! --&gt; 
             &lt;/pre&gt;
           &lt;/td&gt;
           &lt;td&gt;&lt;button id="eval" type="button"&gt;eval&lt;/button&gt;&lt;/td&gt;
