--- a/node30.html
+++ b/node30.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1303"
+<A NAME="tex2html1306"
   HREF="node31.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1297"
+<A NAME="tex2html1300"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1291"
+<A NAME="tex2html1294"
   HREF="node29.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1299"
+<A NAME="tex2html1302"
   HREF="node96.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1301"
+<A NAME="tex2html1304"
   HREF="node99.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,27 +92,49 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1304"
+<B> Sig:</B> <A NAME="tex2html1307"
   HREF="node31.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1298"
+<B>Sup:</B> <A NAME="tex2html1301"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1292"
+<B> Ant:</B> <A NAME="tex2html1295"
   HREF="node29.html">Introducción a los PEGs</A>
 <B> Con:</B> 
-<A NAME="tex2html1299"
+<A NAME="tex2html1302"
   HREF="node96.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1301"
+<A NAME="tex2html1304"
   HREF="node99.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
+<!--Table of Child-Links-->
+<A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
+
+<UL CLASS="ChildLinks">
+<LI><UL>
+<LI><UL>
+<LI><A NAME="tex2html1308"
+  HREF="node30.html#SECTION04420010000000000000">What is</A>
+<LI><A NAME="tex2html1309"
+  HREF="node30.html#SECTION04420020000000000000">Installation</A>
+<LI><A NAME="tex2html1310"
+  HREF="node30.html#SECTION04420030000000000000">Using it</A>
+</UL></UL></UL>
+<!--End of Table of Child-Links-->
+<HR>
 
 <H1><A NAME="SECTION04420000000000000000">
 PEGJS</A>
 </H1>
+
+<P>
+
+<H4><A NAME="SECTION04420010000000000000">
+What is</A>
+</H4>
+  
 
 <P>
  <A NAME="tex2html185"
@@ -129,6 +151,13 @@ describing a language.
 <P>
 We can specify what the parser returns (using semantic actions on matched
 parts of the input). 
+
+<P>
+
+<H4><A NAME="SECTION04420020000000000000">
+Installation</A>
+</H4>
+  
 
 <P>
 To use the pegjs command, install  <A NAME="tex2html187"
@@ -160,7 +189,15 @@ or <A NAME="tex2html191"
   HREF="https://github.com/dmajda/pegjs/releases/download/v0.8.0/peg-0.8.0.min.js">minified version</A>).
 
 <P>
+
+<H4><A NAME="SECTION04420030000000000000">
+Using it</A>
+</H4>
+  
+
+<P>
 <PRE>
+[~/srcPLgrado/pegjs/examples(master)]$ node
 &gt; PEG = require("pegjs")
 { VERSION: '0.8.0',
   GrammarError: [Function],
@@ -189,19 +226,19 @@ or <A NAME="tex2html191"
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1303"
+<A NAME="tex2html1306"
   HREF="node31.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1297"
+<A NAME="tex2html1300"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1291"
+<A NAME="tex2html1294"
   HREF="node29.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1299"
+<A NAME="tex2html1302"
   HREF="node96.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1301"
+<A NAME="tex2html1304"
   HREF="node99.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -253,11 +290,11 @@ or <A NAME="tex2html191"
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1304"
+<B> Sig:</B> <A NAME="tex2html1307"
   HREF="node31.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1298"
+<B>Sup:</B> <A NAME="tex2html1301"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1292"
+<B> Ant:</B> <A NAME="tex2html1295"
   HREF="node29.html">Introducción a los PEGs</A>
 </DIV>
 <!--End of Navigation Panel-->
