--- a/node30.html
+++ b/node30.html
@@ -234,6 +234,11 @@ Opciones: allowedStartRules</A>
 </H4>
   
 
+Specifying
+
+<FONT COLOR="#ff0000"> allowedStartRules</FONT> we can set the
+rules the parser will be allowed to start parsing from (default: the first rule in the grammar).
+
 <P>
 <PRE>
 [~/srcPLgrado/pegjs/examples(master)]$ cat allowedstartrules.js 
@@ -285,6 +290,13 @@ Opciones: output</A>
   
 
 <P>
+When
+<code>output</code>
+is set to 
+<FONT COLOR="#ff0000"> parser</FONT>, the method will return generated parser object; if
+set to 
+<FONT COLOR="#0000ff"> source</FONT>, it will return parser source code as a string (default:
+<code>parser</code>).
 <PRE>
 &gt; PEG = require("pegjs")
 &gt; grammar = "a = 'hello' b\nb='world'"
