--- a/node30.html
+++ b/node30.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1308"
+<A NAME="tex2html1309"
   HREF="node31.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1302"
+<A NAME="tex2html1303"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1296"
+<A NAME="tex2html1297"
   HREF="node29.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1304"
+<A NAME="tex2html1305"
   HREF="node96.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1306"
+<A NAME="tex2html1307"
   HREF="node99.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1309"
+<B> Sig:</B> <A NAME="tex2html1310"
   HREF="node31.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1303"
+<B>Sup:</B> <A NAME="tex2html1304"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1297"
+<B> Ant:</B> <A NAME="tex2html1298"
   HREF="node29.html">Introducción a los PEGs</A>
 <B> Con:</B> 
-<A NAME="tex2html1304"
+<A NAME="tex2html1305"
   HREF="node96.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1306"
+<A NAME="tex2html1307"
   HREF="node99.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,16 +115,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1310"
-  HREF="node30.html#SECTION04420010000000000000">What is</A>
 <LI><A NAME="tex2html1311"
-  HREF="node30.html#SECTION04420020000000000000">Installation</A>
+  HREF="node30.html#SECTION04420010000000000000">What is</A>
 <LI><A NAME="tex2html1312"
-  HREF="node30.html#SECTION04420030000000000000">Using it</A>
+  HREF="node30.html#SECTION04420020000000000000">Installation</A>
 <LI><A NAME="tex2html1313"
-  HREF="node30.html#SECTION04420040000000000000">Opciones: allowedStartRules</A>
+  HREF="node30.html#SECTION04420030000000000000">Using it</A>
 <LI><A NAME="tex2html1314"
+  HREF="node30.html#SECTION04420040000000000000">Opciones: allowedStartRules</A>
+<LI><A NAME="tex2html1315"
   HREF="node30.html#SECTION04420050000000000000">Opciones: output</A>
+<LI><A NAME="tex2html1316"
+  HREF="node30.html#SECTION04420060000000000000">Opciones: plugin</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -321,20 +323,47 @@ undefined
 
 <P>
 
+<H4><A NAME="SECTION04420060000000000000">
+Opciones: plugin</A>
+</H4>
+  
+
+La opción 
+
+<FONT COLOR="#ff0000"> plugins</FONT>
+indica que plugin se van a usar.
+
+<P>
+<PRE>
+[~/srcPLgrado/pegjs/examples(master)]$ cat plugin.coffee 
+#!/usr/bin/env coffee
+PEG = require 'pegjs'
+coffee = require 'pegjs-coffee-plugin'
+grammar = "a = 'hello' b\nb = 'world'"
+parser = PEG.buildParser grammar, plugins: [coffee]
+r = parser.parse "helloworld"
+console.log(r)
+</PRE>
+
+<P>
+<PRE>
+[~/srcPLgrado/pegjs/examples(master)]$ ./plugin.coffee 
+[ 'hello', 'world' ]
+</PRE>
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1308"
+<A NAME="tex2html1309"
   HREF="node31.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1302"
+<A NAME="tex2html1303"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1296"
+<A NAME="tex2html1297"
   HREF="node29.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1304"
+<A NAME="tex2html1305"
   HREF="node96.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1306"
+<A NAME="tex2html1307"
   HREF="node99.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -386,11 +415,11 @@ undefined
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1309"
+<B> Sig:</B> <A NAME="tex2html1310"
   HREF="node31.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1303"
+<B>Sup:</B> <A NAME="tex2html1304"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1297"
+<B> Ant:</B> <A NAME="tex2html1298"
   HREF="node29.html">Introducción a los PEGs</A>
 </DIV>
 <!--End of Navigation Panel-->
