--- a/node28.html
+++ b/node28.html
@@ -150,82 +150,86 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
   HREF="node30.html#SECTION04420050000000000000">Opciones: output</A>
 <LI><A NAME="tex2html1247"
   HREF="node30.html#SECTION04420060000000000000">Opciones: plugin</A>
+<LI><A NAME="tex2html1248"
+  HREF="node30.html#SECTION04420070000000000000">cache</A>
+<LI><A NAME="tex2html1249"
+  HREF="node30.html#SECTION04420080000000000000">optimize</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1248"
+<LI><A NAME="tex2html1250"
   HREF="node31.html">Un Ejemplo Sencillo</A>
 <UL>
-<LI><A NAME="tex2html1249"
-  HREF="node31.html#SECTION04430010000000000000">Donde</A>
-<LI><A NAME="tex2html1250"
-  HREF="node31.html#SECTION04430020000000000000">arithmetics.pegjs</A>
 <LI><A NAME="tex2html1251"
-  HREF="node31.html#SECTION04430030000000000000">main.js</A>
+  HREF="node31.html#SECTION04430010000000000000">Donde</A>
 <LI><A NAME="tex2html1252"
-  HREF="node31.html#SECTION04430040000000000000">Rakefile</A>
+  HREF="node31.html#SECTION04430020000000000000">arithmetics.pegjs</A>
 <LI><A NAME="tex2html1253"
-  HREF="node31.html#SECTION04430050000000000000">Compilación</A>
+  HREF="node31.html#SECTION04430030000000000000">main.js</A>
 <LI><A NAME="tex2html1254"
+  HREF="node31.html#SECTION04430040000000000000">Rakefile</A>
+<LI><A NAME="tex2html1255"
+  HREF="node31.html#SECTION04430050000000000000">Compilación</A>
+<LI><A NAME="tex2html1256"
   HREF="node31.html#SECTION04431000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1255"
+<LI><A NAME="tex2html1257"
   HREF="node32.html">PegJS en los Browser</A>
 <UL>
-<LI><A NAME="tex2html1256"
-  HREF="node32.html#SECTION04440010000000000000">La opción -e de pegjs</A>
-<LI><A NAME="tex2html1257"
-  HREF="node32.html#SECTION04440020000000000000">arithmetic.pegjs</A>
 <LI><A NAME="tex2html1258"
-  HREF="node32.html#SECTION04440030000000000000">calculator.html</A>
+  HREF="node32.html#SECTION04440010000000000000">La opción -e de pegjs</A>
 <LI><A NAME="tex2html1259"
+  HREF="node32.html#SECTION04440020000000000000">arithmetic.pegjs</A>
+<LI><A NAME="tex2html1260"
+  HREF="node32.html#SECTION04440030000000000000">calculator.html</A>
+<LI><A NAME="tex2html1261"
   HREF="node32.html#SECTION04440040000000000000">calculator.js</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1260"
+<LI><A NAME="tex2html1262"
   HREF="node33.html">Eliminación de la Recursividad por la Izquierda</A>
 <UL>
-<LI><A NAME="tex2html1261"
+<LI><A NAME="tex2html1263"
   HREF="node33.html#SECTION04451000000000000000">Eliminación de la Recursividad por la izquierda Respetando el Orden de 
 Ejecución de las Acciones Semánticas</A>
-<LI><A NAME="tex2html1262"
+<LI><A NAME="tex2html1264"
   HREF="node33.html#SECTION04452000000000000000">Eliminando la Recursividad por la Izquierda en la Calculadora</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1263"
+<LI><A NAME="tex2html1265"
   HREF="node34.html">Eliminación de la Recursividad por la Izquierda y Atributos Heredados</A>
 <UL>
-<LI><A NAME="tex2html1264"
-  HREF="node34.html#SECTION04461000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
-<LI><A NAME="tex2html1265"
-  HREF="node34.html#SECTION04462000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
 <LI><A NAME="tex2html1266"
+  HREF="node34.html#SECTION04461000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
+<LI><A NAME="tex2html1267"
+  HREF="node34.html#SECTION04462000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+<LI><A NAME="tex2html1268"
   HREF="node34.html#SECTION04463000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1267"
-  HREF="node35.html">Asociando un else con su if mas cercano</A>
-<LI><A NAME="tex2html1268"
-  HREF="node36.html">Comentarios Anidados</A>
 <LI><A NAME="tex2html1269"
-  HREF="node37.html">Un Lenguaje Dependiente del Contexto</A>
+  HREF="node35.html">Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html1270"
+  HREF="node36.html">Comentarios Anidados</A>
+<LI><A NAME="tex2html1271"
+  HREF="node37.html">Un Lenguaje Dependiente del Contexto</A>
+<LI><A NAME="tex2html1272"
   HREF="node38.html">Usando Pegjs con CoffeeScript</A>
 <UL>
-<LI><A NAME="tex2html1271"
-  HREF="node38.html#SECTION044100010000000000000">Instalación de pegjs-coffee-plugin</A>
-<LI><A NAME="tex2html1272"
-  HREF="node38.html#SECTION044100020000000000000">Ejemplo Sencillo</A>
 <LI><A NAME="tex2html1273"
+  HREF="node38.html#SECTION044100010000000000000">Instalación de pegjs-coffee-plugin</A>
+<LI><A NAME="tex2html1274"
+  HREF="node38.html#SECTION044100020000000000000">Ejemplo Sencillo</A>
+<LI><A NAME="tex2html1275"
   HREF="node38.html#SECTION044100030000000000000">Véase También</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1274"
+<LI><A NAME="tex2html1276"
   HREF="node39.html">Práctica: Ambiguedad en C++</A>
-<LI><A NAME="tex2html1275"
+<LI><A NAME="tex2html1277"
   HREF="node40.html">Práctica: Inventando un Lenguaje: Tortoise</A>
 <UL>
-<LI><A NAME="tex2html1276"
+<LI><A NAME="tex2html1278"
   HREF="node40.html#SECTION044120010000000000000">Recursos</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
