--- a/node30.html
+++ b/node30.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1309"
+<A NAME="tex2html1311"
   HREF="node31.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1303"
+<A NAME="tex2html1305"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1297"
+<A NAME="tex2html1299"
   HREF="node29.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1305"
+<A NAME="tex2html1307"
   HREF="node96.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1307"
+<A NAME="tex2html1309"
   HREF="node99.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1310"
+<B> Sig:</B> <A NAME="tex2html1312"
   HREF="node31.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1304"
+<B>Sup:</B> <A NAME="tex2html1306"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1298"
+<B> Ant:</B> <A NAME="tex2html1300"
   HREF="node29.html">Introducción a los PEGs</A>
 <B> Con:</B> 
-<A NAME="tex2html1305"
+<A NAME="tex2html1307"
   HREF="node96.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1307"
+<A NAME="tex2html1309"
   HREF="node99.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,18 +115,22 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1311"
-  HREF="node30.html#SECTION04420010000000000000">What is</A>
-<LI><A NAME="tex2html1312"
-  HREF="node30.html#SECTION04420020000000000000">Installation</A>
 <LI><A NAME="tex2html1313"
-  HREF="node30.html#SECTION04420030000000000000">Using it</A>
+  HREF="node30.html#SECTION04420010000000000000">What is</A>
 <LI><A NAME="tex2html1314"
-  HREF="node30.html#SECTION04420040000000000000">Opciones: allowedStartRules</A>
+  HREF="node30.html#SECTION04420020000000000000">Installation</A>
 <LI><A NAME="tex2html1315"
-  HREF="node30.html#SECTION04420050000000000000">Opciones: output</A>
+  HREF="node30.html#SECTION04420030000000000000">Using it</A>
 <LI><A NAME="tex2html1316"
+  HREF="node30.html#SECTION04420040000000000000">Opciones: allowedStartRules</A>
+<LI><A NAME="tex2html1317"
+  HREF="node30.html#SECTION04420050000000000000">Opciones: output</A>
+<LI><A NAME="tex2html1318"
   HREF="node30.html#SECTION04420060000000000000">Opciones: plugin</A>
+<LI><A NAME="tex2html1319"
+  HREF="node30.html#SECTION04420070000000000000">cache</A>
+<LI><A NAME="tex2html1320"
+  HREF="node30.html#SECTION04420080000000000000">optimize</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -358,20 +362,43 @@ r = parser.parse "hello world"
 
 <P>
 
+<H4><A NAME="SECTION04420070000000000000">
+cache</A>
+</H4>
+  
+
+<P>
+If <code>true</code>, makes the parser cache results, avoiding exponential parsing
+time in pathological cases but making the parser slower (default:
+<code>false</code>).
+
+<P>
+
+<H4><A NAME="SECTION04420080000000000000">
+optimize</A>
+</H4>
+  
+
+<P>
+Selects between optimizing the generated parser for parsing speed
+(<code>speed</code>) or code size (<code>size</code>) (default: <code>speed</code>).
+
+<P>
+
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1309"
+<A NAME="tex2html1311"
   HREF="node31.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1303"
+<A NAME="tex2html1305"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1297"
+<A NAME="tex2html1299"
   HREF="node29.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1305"
+<A NAME="tex2html1307"
   HREF="node96.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1307"
+<A NAME="tex2html1309"
   HREF="node99.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -423,11 +450,11 @@ r = parser.parse "hello world"
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1310"
+<B> Sig:</B> <A NAME="tex2html1312"
   HREF="node31.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1304"
+<B>Sup:</B> <A NAME="tex2html1306"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1298"
+<B> Ant:</B> <A NAME="tex2html1300"
   HREF="node29.html">Introducción a los PEGs</A>
 </DIV>
 <!--End of Navigation Panel-->
