--- a/node30.html
+++ b/node30.html
@@ -269,6 +269,22 @@ Using it</A>
 { SyntaxError: [Function: SyntaxError],
   parse: [Function: parse] }
 </PRE>
+
+<P>
+Using the generated parser is simple — just call its <code>parse</code> method
+and pass an input string as a parameter. The method will return a parse
+result 
+or throw an exception if the input is invalid. The exception will contain
+offset, line, column, expected, found and message properties with more
+details about the error.
+
+<P>
+You can tweak parser behavior by passing a second parameter with an options object to the parse method. Only one option is currently supported:
+
+<P>
+<code>startRule</code> which is the name of the rule to start parsing from.
+
+<P>
 <PRE>
 &gt; parser.parse("abba"); 
 [ 'a', 'b', 'b', 'a' ]
