--- a/node30.html
+++ b/node30.html
@@ -273,8 +273,8 @@ Using it</A>
 <P>
 Using the generated parser is simple — just call its <code>parse</code> method
 and pass an input string as a parameter. The method will return a parse
-result 
-or throw an exception if the input is invalid. The exception will contain
+result or throw an 
+<FONT COLOR="#ff0000"> exception</FONT> if the input is invalid. The exception will contain
 offset, line, column, expected, found and message properties with more
 details about the error.
 
