--- a/node30.html
+++ b/node30.html
@@ -274,12 +274,12 @@ Using it</A>
 Using the generated parser is simple — just call its <code>parse</code> method
 and pass an input string as a parameter. The method will return a parse
 result or throw an 
-<FONT COLOR="#ff0000"> exception</FONT> if the input is invalid. The exception will contain
-offset, line, column, expected, found and message properties with more
-details about the error.
+<FONT COLOR="#ff0000"> exception</FONT> if the input is invalid. 
 
 <P>
-You can tweak parser behavior by passing a second parameter with an options object to the parse method. Only one option is currently supported:
+You can tweak parser behavior by passing a second parameter with
+an <code>options</code> object to the parse method. Only one option is currently
+supported:
 
 <P>
 <code>startRule</code> which is the name of the rule to start parsing from.
@@ -345,6 +345,26 @@ Error!!!!
   column: 1,
   name: 'SyntaxError' }
 </PRE>
+
+<P>
+The 
+<FONT COLOR="#ff0000"> exception</FONT> contains
+
+<UL>
+<LI>message 
+</LI>
+<LI>expected, 
+</LI>
+<LI>found 
+</LI>
+<LI>offset, 
+</LI>
+<LI>line, 
+</LI>
+<LI>column, 
+</LI>
+</UL>
+and properties with more details about the error.
 
 <P>
 
