--- a/node30.html
+++ b/node30.html
@@ -272,14 +272,23 @@ Using it</A>
 
 <P>
 Using the generated parser is simple — just call its <code>parse</code> method
-and pass an input string as a parameter. The method will return a parse
-result or throw an 
-<FONT COLOR="#ff0000"> exception</FONT> if the input is invalid. 
+and pass an input string as a parameter. 
 
 <P>
+The method will return 
+
+<UL>
+<LI>a parse result or 
+</LI>
+<LI>throw an 
+<FONT COLOR="#ff0000"> exception</FONT> if the input is invalid.  
+</LI>
+</UL>
 You can tweak parser behavior by passing a second parameter with
-an <code>options</code> object to the parse method. Only one option is currently
-supported:
+an <code>options</code> object to the <code>parse</code> method. 
+
+<P>
+Only one option is currently supported:
 
 <P>
 <code>startRule</code> which is the name of the rule to start parsing from.
