--- a/node39.html
+++ b/node39.html
@@ -123,6 +123,9 @@ realizado en la práctica
 usando  <A NAME="tex2html194"
   HREF="http://pegjs.majda.cz/">PEG.js</A>
 .
+Modifique <code>block</code> y <code>statement</code> para que los 
+<code>procedure</code> reciban argumentos y las llamadas 
+a procedimiento puedan pasar argumentos.
 
 <P>
 
