--- a/node28.html
+++ b/node28.html
@@ -185,57 +185,59 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <LI><A NAME="tex2html1272"
   HREF="node33.html#SECTION04450020000000000000">arithmetic.pegjs</A>
 <LI><A NAME="tex2html1273"
-  HREF="node33.html#SECTION04450030000000000000">calculator.html</A>
+  HREF="node33.html#SECTION04450030000000000000">Compilación</A>
 <LI><A NAME="tex2html1274"
-  HREF="node33.html#SECTION04450040000000000000">calculator.js</A>
+  HREF="node33.html#SECTION04450040000000000000">calculator.html</A>
+<LI><A NAME="tex2html1275"
+  HREF="node33.html#SECTION04450050000000000000">calculator.js</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1275"
+<LI><A NAME="tex2html1276"
   HREF="node34.html">Eliminación de la Recursividad por la Izquierda</A>
 <UL>
-<LI><A NAME="tex2html1276"
+<LI><A NAME="tex2html1277"
   HREF="node34.html#SECTION04461000000000000000">Eliminación de la Recursividad por la izquierda Respetando el Orden de 
 Ejecución de las Acciones Semánticas</A>
-<LI><A NAME="tex2html1277"
+<LI><A NAME="tex2html1278"
   HREF="node34.html#SECTION04462000000000000000">Eliminando la Recursividad por la Izquierda en la Calculadora</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1278"
+<LI><A NAME="tex2html1279"
   HREF="node35.html">Eliminación de la Recursividad por la Izquierda y Atributos Heredados</A>
 <UL>
-<LI><A NAME="tex2html1279"
-  HREF="node35.html#SECTION04471000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
 <LI><A NAME="tex2html1280"
-  HREF="node35.html#SECTION04472000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+  HREF="node35.html#SECTION04471000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
 <LI><A NAME="tex2html1281"
+  HREF="node35.html#SECTION04472000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+<LI><A NAME="tex2html1282"
   HREF="node35.html#SECTION04473000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1282"
-  HREF="node36.html">Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html1283"
-  HREF="node37.html">Comentarios Anidados</A>
+  HREF="node36.html">Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html1284"
-  HREF="node38.html">Un Lenguaje Dependiente del Contexto</A>
+  HREF="node37.html">Comentarios Anidados</A>
 <LI><A NAME="tex2html1285"
+  HREF="node38.html">Un Lenguaje Dependiente del Contexto</A>
+<LI><A NAME="tex2html1286"
   HREF="node39.html">Usando Pegjs con CoffeeScript</A>
 <UL>
-<LI><A NAME="tex2html1286"
-  HREF="node39.html#SECTION044110010000000000000">Instalación de pegjs-coffee-plugin</A>
 <LI><A NAME="tex2html1287"
-  HREF="node39.html#SECTION044110020000000000000">Ejemplo Sencillo</A>
+  HREF="node39.html#SECTION044110010000000000000">Instalación de pegjs-coffee-plugin</A>
 <LI><A NAME="tex2html1288"
+  HREF="node39.html#SECTION044110020000000000000">Ejemplo Sencillo</A>
+<LI><A NAME="tex2html1289"
   HREF="node39.html#SECTION044110030000000000000">Véase También</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1289"
-  HREF="node40.html">Práctica: PL0 ampliado</A>
 <LI><A NAME="tex2html1290"
-  HREF="node41.html">Práctica: Ambiguedad en C++</A>
+  HREF="node40.html">Práctica: PL0 ampliado</A>
 <LI><A NAME="tex2html1291"
+  HREF="node41.html">Práctica: Ambiguedad en C++</A>
+<LI><A NAME="tex2html1292"
   HREF="node42.html">Práctica: Inventando un Lenguaje: Tortoise</A>
 <UL>
-<LI><A NAME="tex2html1292"
+<LI><A NAME="tex2html1293"
   HREF="node42.html#SECTION044140010000000000000">Recursos</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
