--- a/node33.html
+++ b/node33.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1382"
+<A NAME="tex2html1383"
   HREF="node34.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1376"
+<A NAME="tex2html1377"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1370"
+<A NAME="tex2html1371"
   HREF="node32.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1378"
+<A NAME="tex2html1379"
   HREF="node98.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1380"
+<A NAME="tex2html1381"
   HREF="node101.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1383"
+<B> Sig:</B> <A NAME="tex2html1384"
   HREF="node34.html">Eliminación de la Recursividad</A>
-<B>Sup:</B> <A NAME="tex2html1377"
+<B>Sup:</B> <A NAME="tex2html1378"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1371"
+<B> Ant:</B> <A NAME="tex2html1372"
   HREF="node32.html">Acciones Intermedias</A>
 <B> Con:</B> 
-<A NAME="tex2html1378"
+<A NAME="tex2html1379"
   HREF="node98.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1380"
+<A NAME="tex2html1381"
   HREF="node101.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,14 +115,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1384"
-  HREF="node33.html#SECTION04450010000000000000">La opción -e de pegjs</A>
 <LI><A NAME="tex2html1385"
-  HREF="node33.html#SECTION04450020000000000000">arithmetic.pegjs</A>
+  HREF="node33.html#SECTION04450010000000000000">La opción -e de pegjs</A>
 <LI><A NAME="tex2html1386"
-  HREF="node33.html#SECTION04450030000000000000">calculator.html</A>
+  HREF="node33.html#SECTION04450020000000000000">arithmetic.pegjs</A>
 <LI><A NAME="tex2html1387"
-  HREF="node33.html#SECTION04450040000000000000">calculator.js</A>
+  HREF="node33.html#SECTION04450030000000000000">Compilación</A>
+<LI><A NAME="tex2html1388"
+  HREF="node33.html#SECTION04450040000000000000">calculator.html</A>
+<LI><A NAME="tex2html1389"
+  HREF="node33.html#SECTION04450050000000000000">calculator.js</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -223,6 +225,19 @@ NUMBER = _ digits:$[0-9]+ _ { return parseInt(digits, 10); }
 <P>
 
 <H4><A NAME="SECTION04450030000000000000">
+Compilación</A>
+</H4>
+  
+
+<P>
+<PRE>
+[~/srcPLgrado/pegjs/examples(master)]$ rake web
+../bin/pegjs -e calculator arithmetics.pegjs
+</PRE>
+
+<P>
+
+<H4><A NAME="SECTION04450040000000000000">
 calculator.html</A>
 </H4>
   
@@ -274,7 +289,7 @@ calculator.html</A>
 
 <P>
 
-<H4><A NAME="SECTION04450040000000000000">
+<H4><A NAME="SECTION04450050000000000000">
 calculator.js</A>
 </H4>
   
@@ -308,19 +323,19 @@ $(document).ready(function() {
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1382"
+<A NAME="tex2html1383"
   HREF="node34.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1376"
+<A NAME="tex2html1377"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1370"
+<A NAME="tex2html1371"
   HREF="node32.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1378"
+<A NAME="tex2html1379"
   HREF="node98.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1380"
+<A NAME="tex2html1381"
   HREF="node101.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -372,11 +387,11 @@ $(document).ready(function() {
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1383"
+<B> Sig:</B> <A NAME="tex2html1384"
   HREF="node34.html">Eliminación de la Recursividad</A>
-<B>Sup:</B> <A NAME="tex2html1377"
+<B>Sup:</B> <A NAME="tex2html1378"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1371"
+<B> Ant:</B> <A NAME="tex2html1372"
   HREF="node32.html">Acciones Intermedias</A>
 </DIV>
 <!--End of Navigation Panel-->
