--- a/node34.html
+++ b/node34.html
@@ -367,7 +367,7 @@ Solución</A>
 
 <P>
 <PRE>
-[~/pegjs-coffee-remove-left(master)]$ pegcoffee remove_left_recursive.pegjs 
+[~/pegjs-coffee-remove-left(master)]$ pegjs --plugin pegjs-coffee-plugin remove_left_recursive.pegjs 
 [~/pegjs-coffee-remove-left(master)]$ ls -ltr | tail -1
 -rw-rw-r--  1 casiano  staff   8919  3 jun 10:42 remove_left_recursive.js
 </PRE>
