--- a/node33.html
+++ b/node33.html
@@ -150,7 +150,9 @@ Donde</A>
 <LI><PRE>
 ~/srcPLgrado/pegjs/examples(master)]$ pwd -P
 /Users/casiano/local/src/javascript/PLgrado/pegjs/examples
-[~/srcPLgrado/pegjs/examples(master)]$ 
+</PRE>
+</LI>
+<LI><PRE>
 [~/srcPLgrado/pegjs/examples(master)]$ git remote -v
 dmajda  https://github.com/dmajda/pegjs.git (fetch)
 dmajda  https://github.com/dmajda/pegjs.git (push)
