--- a/node33.html
+++ b/node33.html
@@ -179,6 +179,8 @@ Versiones para Browser</A>
 </H4>
   
 
+Podemos usar directamente las versiones para los browser:
+
 <UL>
 <LI><A NAME="tex2html198"
   HREF="https://github.com/dmajda/pegjs/releases/download/v0.8.0/peg-0.8.0.min.js">PEG.js — minified</A>
