--- a/node33.html
+++ b/node33.html
@@ -248,6 +248,8 @@ calculator.js</A>
 </H4>
   
 
+Ahora, desde el  JavaScript que llama al parser accedemos al objeto
+mediante la variable <code>calculator</code>:
 <PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat calculator.js 
 $(document).ready(function() {
