--- a/node33.html
+++ b/node33.html
@@ -283,6 +283,7 @@ arithmetic.pegjs</A>
 </H4>
   
 
+El PEG describe una calculadora:
 <PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat arithmetics.pegjs 
 /*
