--- a/node33.html
+++ b/node33.html
@@ -124,7 +124,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html1397"
   HREF="node33.html#SECTION04450040000000000000">Compilación</A>
 <LI><A NAME="tex2html1398"
-  HREF="node33.html#SECTION04450050000000000000">calculator.js</A>
+  HREF="node33.html#SECTION04450050000000000000">calc.js</A>
 <LI><A NAME="tex2html1399"
   HREF="node33.html#SECTION04450060000000000000">arithmetic.pegjs</A>
 <LI><A NAME="tex2html1400"
@@ -244,14 +244,14 @@ calculator = (function() {
 <P>
 
 <H4><A NAME="SECTION04450050000000000000">
-calculator.js</A>
+calc.js</A>
 </H4>
   
 
 Ahora, desde el  JavaScript que llama al parser accedemos al objeto
 mediante la variable <code>calculator</code>:
 <PRE>
-[~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat calculator.js 
+[~/srcPLgrado/pegjs/examples(master)]$ cat calc.js 
 $(document).ready(function() {
   $('#eval').click(function() {
     try {
