--- a/node28.html
+++ b/node28.html
@@ -189,7 +189,7 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <LI><A NAME="tex2html1277"
   HREF="node33.html#SECTION04450040000000000000">Compilación</A>
 <LI><A NAME="tex2html1278"
-  HREF="node33.html#SECTION04450050000000000000">calculator.js</A>
+  HREF="node33.html#SECTION04450050000000000000">calc.js</A>
 <LI><A NAME="tex2html1279"
   HREF="node33.html#SECTION04450060000000000000">arithmetic.pegjs</A>
 <LI><A NAME="tex2html1280"
