--- a/node1.html
+++ b/node1.html
@@ -240,7 +240,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html549"
   HREF="node40.html">Usando Pegjs con CoffeeScript</A>
 <LI><A NAME="tex2html550"
-  HREF="node41.html">Práctica: Analizador de PL0 ampliado Usando PEG.js</A>
+  HREF="node41.html">Práctica: Analizador de PL0 Ampliado Usando PEG.js</A>
 <LI><A NAME="tex2html551"
   HREF="node42.html">Práctica: Ambiguedad en C++</A>
 <LI><A NAME="tex2html552"
