--- a/node28.html
+++ b/node28.html
@@ -242,7 +242,7 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 </UL>
 <BR>
 <LI><A NAME="tex2html1300"
-  HREF="node41.html">Práctica: Analizador de PL0 ampliado Usando PEG.js</A>
+  HREF="node41.html">Práctica: Analizador de PL0 Ampliado Usando PEG.js</A>
 <LI><A NAME="tex2html1301"
   HREF="node42.html">Práctica: Ambiguedad en C++</A>
 <LI><A NAME="tex2html1302"
