--- a/node6.html
+++ b/node6.html
@@ -239,7 +239,7 @@ PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
 <LI><A NAME="tex2html762"
   HREF="node40.html">Usando Pegjs con CoffeeScript</A>
 <LI><A NAME="tex2html763"
-  HREF="node41.html">Práctica: Analizador de PL0 ampliado Usando PEG.js</A>
+  HREF="node41.html">Práctica: Analizador de PL0 Ampliado Usando PEG.js</A>
 <LI><A NAME="tex2html764"
   HREF="node42.html">Práctica: Ambiguedad en C++</A>
 <LI><A NAME="tex2html765"
