--- a/node102.html
+++ b/node102.html
@@ -243,7 +243,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DD><DL COMPACT>
 <DT><STRONG>Ambiguedad en C++</STRONG>
 <DD><A HREF="node42.html#4793">Práctica: Ambiguedad en C++</A>
-<DT><STRONG>Analizador de PL0 ampliado Usando PEG.js</STRONG>
+<DT><STRONG>Analizador de PL0 Ampliado Usando PEG.js</STRONG>
 <DD><A HREF="node41.html#4789">Práctica: Analizador de PL0</A>
 <DT><STRONG>Analizador Descendente Predictivo Recursivo</STRONG>
 <DD><A HREF="node24.html#3582">Práctica: Analizador Descendente Predictivo</A>
