--- a/node41.html
+++ b/node41.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Práctica: Analizador de PL0 ampliado Usando PEG.js</TITLE>
-<META NAME="description" CONTENT="Práctica: Analizador de PL0 ampliado Usando PEG.js">
+<TITLE>Práctica: Analizador de PL0 Ampliado Usando PEG.js</TITLE>
+<META NAME="description" CONTENT="Práctica: Analizador de PL0 Ampliado Usando PEG.js">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -115,7 +115,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   
 <A NAME="practica:pl0ampliado"></A>
 <BR>
-Práctica: Analizador de PL0 ampliado Usando PEG.js
+Práctica: Analizador de PL0 Ampliado Usando PEG.js
 </H1>
 Reescriba el analizador sintáctico del lenguaje PL0 
 realizado en la práctica 
