--- a/node41.html
+++ b/node41.html
@@ -182,6 +182,8 @@ Tareas</A>
 <code>procedure</code> reciban argumentos y las llamadas 
 a procedimiento puedan pasar argumentos.
 </LI>
+<LI>Limite el número de programas que se pueden salvar a un número prefijado, por ejemplo 10. Si se intenta salvar uno se suprime uno al azar y se guarda el nuevo.
+</LI>
 </UL>
 
 <P>
