--- a/node41.html
+++ b/node41.html
@@ -186,7 +186,7 @@ a procedimiento puedan pasar argumentos.
 </LI>
 <LI>Limite el número de programas que se pueden salvar a un número prefijado, por ejemplo 10. Si se intenta salvar uno se suprime uno al azar y se guarda el nuevo.
 </LI>
-<LI>Las pruebas deben comprobar que la asociatividad a izquierdas funciona bien,
+<LI>Las pruebas deben comprobar que la asociatividad a izquierdas funciona bien
 y probar todos los constructos del lenguaje así como alguna situación de error
 </LI>
 </UL>
