--- a/node83.html
+++ b/node83.html
@@ -186,6 +186,13 @@ see if your application already has a database provisioned and what plan
 it is.
 
 <P>
+<PRE>
+[~/srcPLgrado/pegjscalc(master)]$ heroku addons
+=== pegjspl0 Configured Add-ons
+heroku-postgresql:hobby-dev  HEROKU_POSTGRESQL_BROWN
+</PRE>
+
+<P>
 
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2391"
