--- a/node80.html
+++ b/node80.html
@@ -189,32 +189,34 @@ Heroku
   HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2319"
   HREF="node83.html#SECTION06130020000000000000">Create new db</A>
+<LI><A NAME="tex2html2320"
+  HREF="node83.html#SECTION06130030000000000000">Establish primary DB</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2320"
+<LI><A NAME="tex2html2321"
   HREF="node84.html">Troubleshooting</A>
 <UL>
-<LI><A NAME="tex2html2321"
-  HREF="node84.html#SECTION06140010000000000000">Failed to require a sourcefile</A>
 <LI><A NAME="tex2html2322"
-  HREF="node84.html#SECTION06140020000000000000">Encoding error</A>
+  HREF="node84.html#SECTION06140010000000000000">Failed to require a sourcefile</A>
 <LI><A NAME="tex2html2323"
-  HREF="node84.html#SECTION06140030000000000000">Missing a gem</A>
+  HREF="node84.html#SECTION06140020000000000000">Encoding error</A>
 <LI><A NAME="tex2html2324"
-  HREF="node84.html#SECTION06140040000000000000">Runtime dependencies on development/test gems</A>
+  HREF="node84.html#SECTION06140030000000000000">Missing a gem</A>
 <LI><A NAME="tex2html2325"
-  HREF="node84.html#SECTION06140050000000000000">Versiones soportadas por Heroku</A>
+  HREF="node84.html#SECTION06140040000000000000">Runtime dependencies on development/test gems</A>
 <LI><A NAME="tex2html2326"
+  HREF="node84.html#SECTION06140050000000000000">Versiones soportadas por Heroku</A>
+<LI><A NAME="tex2html2327"
   HREF="node84.html#SECTION06140060000000000000">Rack::Sendfile</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2327"
-  HREF="node85.html">Configuration</A>
 <LI><A NAME="tex2html2328"
-  HREF="node86.html">Make Heroku run non-master Git branch</A>
+  HREF="node85.html">Configuration</A>
 <LI><A NAME="tex2html2329"
-  HREF="node87.html">Account Verification and add-ons</A>
+  HREF="node86.html">Make Heroku run non-master Git branch</A>
 <LI><A NAME="tex2html2330"
+  HREF="node87.html">Account Verification and add-ons</A>
+<LI><A NAME="tex2html2331"
   HREF="node88.html">Véase</A>
 </UL>
 <!--End of Table of Child-Links-->
