--- a/node83.html
+++ b/node83.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2396"
+<A NAME="tex2html2397"
   HREF="node84.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2390"
+<A NAME="tex2html2391"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2384"
+<A NAME="tex2html2385"
   HREF="node82.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2392"
+<A NAME="tex2html2393"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2394"
+<A NAME="tex2html2395"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2397"
+<B> Sig:</B> <A NAME="tex2html2398"
   HREF="node84.html">Troubleshooting</A>
-<B>Sup:</B> <A NAME="tex2html2391"
+<B>Sup:</B> <A NAME="tex2html2392"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2385"
+<B> Ant:</B> <A NAME="tex2html2386"
   HREF="node82.html">Logging</A>
 <B> Con:</B> 
-<A NAME="tex2html2392"
+<A NAME="tex2html2393"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2394"
+<A NAME="tex2html2395"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,10 +115,12 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2398"
-  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2399"
+  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
+<LI><A NAME="tex2html2400"
   HREF="node83.html#SECTION06130020000000000000">Create new db</A>
+<LI><A NAME="tex2html2401"
+  HREF="node83.html#SECTION06130030000000000000">Establish primary DB</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -257,20 +259,44 @@ RACK_ENV:                    production
 
 <P>
 
+<H4><A NAME="SECTION06130030000000000000">
+Establish primary DB</A>
+</H4>
+  
+
+<P>
+Heroku recommends using the <code>DATABASE_URL</code> config var to store
+the location
+of your primary database. 
+
+<P>
+In single-database setups your new database
+will have already been assigned a <code>HEROKU_POSTGRESQL_COLOR_URL</code>
+config with
+the accompanying <code>DATABASE_URL</code>. 
+
+<P>
+You may verify this via heroku config and
+verifying the value of both <code>HEROKU_POSTGRESQL_COLOR_URL</code> 
+and <code>DATABASE_URL</code>
+which should match.
+
+<P>
+
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2396"
+<A NAME="tex2html2397"
   HREF="node84.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2390"
+<A NAME="tex2html2391"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2384"
+<A NAME="tex2html2385"
   HREF="node82.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2392"
+<A NAME="tex2html2393"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2394"
+<A NAME="tex2html2395"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -322,11 +348,11 @@ RACK_ENV:                    production
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2397"
+<B> Sig:</B> <A NAME="tex2html2398"
   HREF="node84.html">Troubleshooting</A>
-<B>Sup:</B> <A NAME="tex2html2391"
+<B>Sup:</B> <A NAME="tex2html2392"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2385"
+<B> Ant:</B> <A NAME="tex2html2386"
   HREF="node82.html">Logging</A>
 </DIV>
 <!--End of Navigation Panel-->
