--- a/node83.html
+++ b/node83.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2397"
+<A NAME="tex2html2398"
   HREF="node84.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2391"
+<A NAME="tex2html2392"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2385"
+<A NAME="tex2html2386"
   HREF="node82.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2393"
+<A NAME="tex2html2394"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2395"
+<A NAME="tex2html2396"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2398"
+<B> Sig:</B> <A NAME="tex2html2399"
   HREF="node84.html">Troubleshooting</A>
-<B>Sup:</B> <A NAME="tex2html2392"
+<B>Sup:</B> <A NAME="tex2html2393"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2386"
+<B> Ant:</B> <A NAME="tex2html2387"
   HREF="node82.html">Logging</A>
 <B> Con:</B> 
-<A NAME="tex2html2393"
+<A NAME="tex2html2394"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2395"
+<A NAME="tex2html2396"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,12 +115,14 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2399"
-  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2400"
-  HREF="node83.html#SECTION06130020000000000000">Create new db</A>
+  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2401"
+  HREF="node83.html#SECTION06130020000000000000">Create new db</A>
+<LI><A NAME="tex2html2402"
   HREF="node83.html#SECTION06130030000000000000">Establish primary DB</A>
+<LI><A NAME="tex2html2403"
+  HREF="node83.html#SECTION06130040000000000000">pg:info</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -283,20 +285,49 @@ which should match.
 
 <P>
 
+<H4><A NAME="SECTION06130040000000000000">
+pg:info</A>
+</H4>
+  
+
+<P>
+To see all PostgreSQL databases provisioned by your application and the
+identifying characteristics of each 
+(db size, status, number of tables, PG version, creation date etc…) 
+use the <code>heroku pg:info</code> command.
+
+<P>
+<PRE>
+[~/srcPLgrado/pegjscalc(master)]$ heroku pg:info
+=== HEROKU_POSTGRESQL_BROWN_URL (DATABASE_URL)
+Plan:        Hobby-dev
+Status:      available
+Connections: 0
+PG Version:  9.3.3
+Created:     2014-03-20 23:33 UTC
+Data Size:   6.5 MB
+Tables:      1
+Rows:        4/10000 (In compliance)
+Fork/Follow: Unsupported
+Rollback:    Unsupported
+</PRE>
+
+<P>
+
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2397"
+<A NAME="tex2html2398"
   HREF="node84.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2391"
+<A NAME="tex2html2392"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2385"
+<A NAME="tex2html2386"
   HREF="node82.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2393"
+<A NAME="tex2html2394"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2395"
+<A NAME="tex2html2396"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -348,11 +379,11 @@ which should match.
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2398"
+<B> Sig:</B> <A NAME="tex2html2399"
   HREF="node84.html">Troubleshooting</A>
-<B>Sup:</B> <A NAME="tex2html2392"
+<B>Sup:</B> <A NAME="tex2html2393"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2386"
+<B> Ant:</B> <A NAME="tex2html2387"
   HREF="node82.html">Logging</A>
 </DIV>
 <!--End of Navigation Panel-->
