--- a/node83.html
+++ b/node83.html
@@ -325,6 +325,16 @@ Rollback:    Unsupported
 </PRE>
 
 <P>
+To continuously monitor the status of your database, pass pg:info through the unix watch command:
+<PRE>
+[~/srcPLgrado/pegjscalc(master)]$ watch heroku pg:info
+-bash: watch: no se encontró la orden
+[~/srcPLgrado/pegjscalc(master)]$ brew install watch
+[~/srcPLgrado/pegjscalc(master)]$ watch heroku pg:info
+...
+</PRE>
+
+<P>
 
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2398"
