--- a/node83.html
+++ b/node83.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2398"
+<A NAME="tex2html2399"
   HREF="node84.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2392"
+<A NAME="tex2html2393"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2386"
+<A NAME="tex2html2387"
   HREF="node82.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2394"
+<A NAME="tex2html2395"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2396"
+<A NAME="tex2html2397"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2399"
+<B> Sig:</B> <A NAME="tex2html2400"
   HREF="node84.html">Troubleshooting</A>
-<B>Sup:</B> <A NAME="tex2html2393"
+<B>Sup:</B> <A NAME="tex2html2394"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2387"
+<B> Ant:</B> <A NAME="tex2html2388"
   HREF="node82.html">Logging</A>
 <B> Con:</B> 
-<A NAME="tex2html2394"
+<A NAME="tex2html2395"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2396"
+<A NAME="tex2html2397"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,14 +115,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2400"
-  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2401"
-  HREF="node83.html#SECTION06130020000000000000">Create new db</A>
+  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2402"
-  HREF="node83.html#SECTION06130030000000000000">Establish primary DB</A>
+  HREF="node83.html#SECTION06130020000000000000">Create new db</A>
 <LI><A NAME="tex2html2403"
+  HREF="node83.html#SECTION06130030000000000000">Establish primary DB</A>
+<LI><A NAME="tex2html2404"
   HREF="node83.html#SECTION06130040000000000000">pg:info</A>
+<LI><A NAME="tex2html2405"
+  HREF="node83.html#SECTION06130050000000000000">pg:psql</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -336,20 +338,67 @@ To continuously monitor the status of your database, pass pg:info through the un
 
 <P>
 
+<H4><A NAME="SECTION06130050000000000000">
+pg:psql</A>
+</H4>
+  
+
+<code>psql</code> is the native PostgreSQL interactive terminal and is used to execute queries and issue commands to the connected database.
+
+<P>
+To establish a <code>psql</code> session 
+with your remote database use <code>heroku pg:psql</code>.
+You must have PostgreSQL installed on your system to use heroku <code>pg:psql</code>.
+
+<P>
+<PRE>
+[~/srcPLgrado/pegjscalc(master)]$ heroku pg:psql
+---&gt; Connecting to HEROKU_POSTGRESQL_BROWN_URL (DATABASE_URL)
+psql (9.2.6, server 9.3.3)
+WARNING: psql version 9.2, server version 9.3.
+         Some psql features might not work.
+SSL connection (cipher: DHE-RSA-AES256-SHA, bits: 256)
+Type "help" for help.
+
+pegjspl0::BROWN=&gt; \dt
+               List of relations
+ Schema |     Name     | Type  |     Owner      
+--------+--------------+-------+----------------
+ public | pl0_programs | table | moiwgreelvvujc
+(1 row)
+
+pegjspl0::BROWN=&gt; 
+pegjspl0::BROWN=&gt; SELECT * FROM pl0_programs;
+  name  |           source            
+--------+-----------------------------
+ 3m2m1  |                     3-2-1\r+
+        |           
+ ap1tb  | a+1*b\r                    +
+        |           
+ test   |                     a+1*b\r+
+        |           \r               +
+        |           
+ lolwut |                     3-2-1\r+
+        |           
+(4 rows)
+</PRE>
+
+<P>
+
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2398"
+<A NAME="tex2html2399"
   HREF="node84.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2392"
+<A NAME="tex2html2393"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2386"
+<A NAME="tex2html2387"
   HREF="node82.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2394"
+<A NAME="tex2html2395"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2396"
+<A NAME="tex2html2397"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -401,11 +450,11 @@ To continuously monitor the status of your database, pass pg:info through the un
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2399"
+<B> Sig:</B> <A NAME="tex2html2400"
   HREF="node84.html">Troubleshooting</A>
-<B>Sup:</B> <A NAME="tex2html2393"
+<B>Sup:</B> <A NAME="tex2html2394"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2387"
+<B> Ant:</B> <A NAME="tex2html2388"
   HREF="node82.html">Logging</A>
 </DIV>
 <!--End of Navigation Panel-->
