--- a/node83.html
+++ b/node83.html
@@ -351,6 +351,11 @@ with your remote database use <code>heroku pg:psql</code>.
 You must have PostgreSQL installed on your system to use heroku <code>pg:psql</code>.
 
 <P>
+If you have more than one database, specify the database to connect to as
+the first argument to the command (the database located at <code>DATABASE_URL</code>
+is used by default).
+
+<P>
 <PRE>
 [~/srcPLgrado/pegjscalc(master)]$ heroku pg:psql
 ---&gt; Connecting to HEROKU_POSTGRESQL_BROWN_URL (DATABASE_URL)
