--- a/node83.html
+++ b/node83.html
@@ -351,11 +351,6 @@ with your remote database use <code>heroku pg:psql</code>.
 You must have PostgreSQL installed on your system to use heroku <code>pg:psql</code>.
 
 <P>
-If you have more than one database, specify the database to connect to as
-the first argument to the command (the database located at <code>DATABASE_URL</code>
-is used by default).
-
-<P>
 <PRE>
 [~/srcPLgrado/pegjscalc(master)]$ heroku pg:psql
 ---&gt; Connecting to HEROKU_POSTGRESQL_BROWN_URL (DATABASE_URL)
@@ -386,6 +381,16 @@ pegjspl0::BROWN=&gt; SELECT * FROM pl0_programs;
  lolwut |                     3-2-1\r+
         |           
 (4 rows)
+</PRE>
+
+<P>
+If you have more than one database, specify the database to connect to as
+the first argument to the command (the database located at <code>DATABASE_URL</code>
+is used by default).
+<PRE>
+$ heroku pg:psql HEROKU_POSTGRESQL_GRAY
+Connecting to HEROKU_POSTGRESQL_GRAY... done
+...
 </PRE>
 
 <P>
