--- a/node83.html
+++ b/node83.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2399"
+<A NAME="tex2html2400"
   HREF="node84.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2393"
+<A NAME="tex2html2394"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2387"
+<A NAME="tex2html2388"
   HREF="node82.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2395"
+<A NAME="tex2html2396"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2397"
+<A NAME="tex2html2398"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2400"
+<B> Sig:</B> <A NAME="tex2html2401"
   HREF="node84.html">Troubleshooting</A>
-<B>Sup:</B> <A NAME="tex2html2394"
+<B>Sup:</B> <A NAME="tex2html2395"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2388"
+<B> Ant:</B> <A NAME="tex2html2389"
   HREF="node82.html">Logging</A>
 <B> Con:</B> 
-<A NAME="tex2html2395"
+<A NAME="tex2html2396"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2397"
+<A NAME="tex2html2398"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,16 +115,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2401"
-  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2402"
-  HREF="node83.html#SECTION06130020000000000000">Create new db</A>
+  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2403"
-  HREF="node83.html#SECTION06130030000000000000">Establish primary DB</A>
+  HREF="node83.html#SECTION06130020000000000000">Create new db</A>
 <LI><A NAME="tex2html2404"
-  HREF="node83.html#SECTION06130040000000000000">pg:info</A>
+  HREF="node83.html#SECTION06130030000000000000">Establish primary DB</A>
 <LI><A NAME="tex2html2405"
+  HREF="node83.html#SECTION06130040000000000000">pg:info</A>
+<LI><A NAME="tex2html2406"
   HREF="node83.html#SECTION06130050000000000000">pg:psql</A>
+<LI><A NAME="tex2html2407"
+  HREF="node83.html#SECTION06130060000000000000">Reseting the Database</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -395,20 +397,40 @@ Connecting to HEROKU_POSTGRESQL_GRAY... done
 
 <P>
 
+<H4><A NAME="SECTION06130060000000000000">
+Reseting the Database</A>
+</H4>
+  
+
+<PRE>
+[~/srcPLgrado/pegjscalc(master)]$ heroku pg:reset DATABASE
+
+ !    WARNING: Destructive Action
+ !    This command will affect the app: pegjspl0
+ !    To proceed, type "pegjspl0" or re-run this command with --confirm pegjspl0
+
+&gt; pegjspl0
+Resetting HEROKU_POSTGRESQL_BROWN_URL (DATABASE_URL)... done
+</PRE>
+Es necesario a continuación rearrancar el servidor:
+<PRE>
+[~/srcPLgrado/pegjscalc(master)]$ heroku ps:restart
+Restarting dynos... done
+</PRE>
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2399"
+<A NAME="tex2html2400"
   HREF="node84.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2393"
+<A NAME="tex2html2394"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2387"
+<A NAME="tex2html2388"
   HREF="node82.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2395"
+<A NAME="tex2html2396"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2397"
+<A NAME="tex2html2398"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -460,11 +482,11 @@ Connecting to HEROKU_POSTGRESQL_GRAY... done
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2400"
+<B> Sig:</B> <A NAME="tex2html2401"
   HREF="node84.html">Troubleshooting</A>
-<B>Sup:</B> <A NAME="tex2html2394"
+<B>Sup:</B> <A NAME="tex2html2395"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2388"
+<B> Ant:</B> <A NAME="tex2html2389"
   HREF="node82.html">Logging</A>
 </DIV>
 <!--End of Navigation Panel-->
