--- a/node80.html
+++ b/node80.html
@@ -196,7 +196,7 @@ Heroku
 <LI><A NAME="tex2html2322"
   HREF="node83.html#SECTION06130050000000000000">pg:psql</A>
 <LI><A NAME="tex2html2323"
-  HREF="node83.html#SECTION06130060000000000000">Reseting the Database</A>
+  HREF="node83.html#SECTION06130060000000000000">pg:reset</A>
 </UL>
 <BR>
 <LI><A NAME="tex2html2324"
