--- a/node83.html
+++ b/node83.html
@@ -126,7 +126,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html2406"
   HREF="node83.html#SECTION06130050000000000000">pg:psql</A>
 <LI><A NAME="tex2html2407"
-  HREF="node83.html#SECTION06130060000000000000">Reseting the Database</A>
+  HREF="node83.html#SECTION06130060000000000000">pg:reset</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -398,10 +398,13 @@ Connecting to HEROKU_POSTGRESQL_GRAY... done
 <P>
 
 <H4><A NAME="SECTION06130060000000000000">
-Reseting the Database</A>
+pg:reset</A>
 </H4>
   
 
+ To drop and recreate your database use <code>pg:reset</code>:
+
+<P>
 <PRE>
 [~/srcPLgrado/pegjscalc(master)]$ heroku pg:reset DATABASE
 
